--- a/JavaJob_Maven_1/MavenIndex.html
+++ b/JavaJob_Maven_1/MavenIndex.html
@@ -37,20 +37,16 @@
                                 <li><a href="1Day.html" class="button big">Learn More</a></li>
                             </ul> -->
 
-                            <!-- <hr class="major" />
-                            <h2>第2天 環境建置 和 Maven 建立第一個maven專案</h2>
-                            <p>1.前言<br />
-                                2. 設置maven環境<br />
-                                3. 建立第一個maven專案<br />
-                                4. maven專案 結構 和 Hello World!<br />
-                            </p>
+                            <hr class="major" />
+                            <h2>第2天 Maven 生命週期</h2>
                             <ul class="actions">
                                 <li><a href="2Day.html" class="button big">Learn More</a></li>
-                            </ul> -->
+                            </ul> 
 
                             <hr class="major" />
                             <h2>第3天 Maven 常用指令</h2>
-                            <p>1.常用指令<br />
+                            <p>1.常用命令參數<br />
+                            <p>2.常用指令<br />
                             </p>
                             <ul class="actions">
                                 <li><a href="3Day.html" class="button big">Learn More</a></li>
@@ -78,7 +74,7 @@
 								<li>
 									<span class="opener">Maven</span>
 									<ul>
-                                      <!-- <li><a href="1Day.html">第1天 環境建置 和 Maven 建立第一個maven專案</a></li> -->
+                                      <li><a href="2Day.html">第2天 Maven 生命週期</a></li>
                                       <li><a href="3Day.html">第3天 Maven 常用指令</a></li>
 									</ul>
 								</li>
